# bmi-simplecrop

./: CHANGES.rst  MANIFEST.in  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: changelog.yml  docs.yml  flake8.yml  test.yml
docs/: conf.py  index.rst
news/: 2.feature  2.misc  3.misc  README.rst
src/bmi_simplecrop/: __init__.py  _version.py  bmi_simplecrop.py  bmi_simplecrops.py  simplecrop.py
tests/: test_bmi_simplecrop.py
