[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-simplecrop"
description = "Python interface (with BMI) to the simplecrop model"
authors = [
  {email = "mcflugen@gmail.com"},
  {name = "Eric Hutton"}
]
maintainers = [
  {email = "mcflugen@gmail.com"},
  {name = "Eric Hutton"}
]
keywords=["bmi", "csdms", "simplecrop", "crop"]
license = {file = "LICENSE.rst"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"
dependencies = [
  "bmipy",
  "dask",
  "model_metadata",
  "pandas",
  "scipy",
]
dynamic = ["readme", "version"]


[project.urls]
repository = "https://github.com/mcflugen/bmi-simplecrop"
documentation = "https://github.com/mcflugen/bmi-simplecrop/blob/main/README.rst"
changelog = "https://github.com/mcflugen/bmi-simplecrop/blob/main/CHANGES.rst"


[project.optional-dependencies]
dev = [
  "black",
  "coverage",
  "flake8",
  "isort",
  "nox",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-runner",
  "towncrier",
  "zestreleaser.towncrier",
  "zest.releaser[recommended]",
]
doc = [
  "sphinx",
  "pygments>=2.4",
  "sphinx-inline-tabs",
  "furo",
]
notebook = [
  "notebook",
  "tqdm",
]


[tool.setuptools.dynamic]
readme = {file = ["README.rst", "AUTHORS.rst", "CHANGES.rst"]}
version = {attr = "bmi_simplecrop._version.__version__"}


[tool.pytest.ini_options]
minversion = "5.0"
testpaths = ["src/bmi_simplecrop", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
# usefixtures = suppress_resource_warning
addopts = """
    --ignore setup.py
    --tb native
    --strict
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.black]
line-length = 88


[tool.towncrier]
directory = "news"
package = "bmi-simplecrop"
filename = "CHANGES.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/mcflugen/bmi-simplecrop/issues/{issue}>`_"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
directory = "notebook"
name = "New Tutorial Notebooks"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Other Changes and Additions"
showcontent = true
